bugfix: delete acl dependency for remoting feature: add testng to apitest